k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: devops-lab
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 5000  # Наше приложение на порту 5000
  type: ClusterIP
